test_case/rust-lang_rust/53584_415270707_55.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/structs/structure-constructor-type-mismatch.rs","byte_start":1596,"byte_end":1616,"line_start":64,"line_end":64,"column_start":9,"column_end":29,"is_primary":true,"text":[{"text":"        PointF::<u32> { .. } => {} //~ ERROR wrong number of type arguments","highlight_start":9,"highlight_end":29}],"label":"expected integral variable, found f32","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"expected type `Point<{integer}>`\n   found type `Point<f32>`","code":null,"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error[E0308]: mismatched types\n  --> /checkout/src/test/ui/structs/structure-construco: Foo<'a>, // error: wrong number of lifetime arguments:\n                  //        expected 2, found 1\n    bar: Bar<'a>, // error: wrong number of lifetime arguments:\n                  //        expected 0, found 1\n}\n